improve popover and fix color overflow when stroke is large

--- a/src/styles/User.scss
+++ b/src/styles/User.scss
@@ -1,5 +1,5 @@
 #user-wrapper {
-  background-color: #3b3d54;
+  background-color: #030e32;
   height: 100vh;
   display: flex;
   flex-direction: row;
